--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -3,7 +3,8 @@ h1{
     color: rgb(255, 255, 255);
 }
 p{
-    margin: 0;font-size: 20px;
+    margin: 0;
+    font-size: 20px;
 }
 body{
     margin: 0;
@@ -14,7 +15,7 @@ header{
     text-align: center;
 }
 main{
-    margin: 10px;
+    padding: 10px;
 }
 #parent{
     display: flex;
@@ -25,7 +26,7 @@ main{
     flex-basis: 25%;
     padding: 10px 15px;
     margin: 20px 0px;
-
+    text-align: center;
 }
 .contents img{
     width: 70%;
@@ -49,6 +50,7 @@ footer{
 }
 a{
     color: rgb(255, 255, 255);
+    font-size: 20px;
 }
 a:hover{
     color: rgb(245,178,168)
